--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -1,3 +1,58 @@
 // Place all the styles related to the questions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+$font-stack: 'Open Sans', sans-serif;
+$primary-color: #333;
+$lighter: lighter;
+$bold: bold;
+$yellow: lightyellow;
+$solid: solid;
+$block: block;
+$column: column;
+
+
+body {
+  font: 100% $font-stack;
+  color: $primary-color;
+  font-weight: $lighter;
+}
+
+.container {
+  display: $block;
+  flex-direction: $column;
+}
+
+h2 {
+  font-size: 20px;
+  margin: 0;
+  font-weight: $lighter;
+}
+
+p {
+  font-size: 16px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
+
+div {
+  padding: 8px;
+  margin: 20px 0px;
+}
+
+.answer {
+  background: $yellow;
+}
+
+a, .button {
+  color: #4A4A4A;
+  border: 1px solid #4A4A4A;
+  padding: 8px 24px;
+  border-radius: 50px;
+  font-weight: lighter;
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+  margin: 20px 0px;
+}
